--- a/package.json
+++ b/package.json
@@ -14,7 +14,16 @@
     "@babel/core": "^7.10.1",
     "@babel/node": "^7.10.1",
     "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.1"
+    "@babel/preset-env": "^7.10.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "prettier": "^2.0.5"
   },
   "dependencies": {
     "apollo-datasource-rest": "^0.9.2",
